Dynamic inventory with NodeJS

--- a/control-node/Dockerfile
+++ b/control-node/Dockerfile
@@ -1,5 +1,4 @@
 FROM alpine:3.9
 
-RUN apk add python ansible
-RUN apk add --update openssh sshpass python ansible \
-&& rm  -rf /tmp/* /var/cache/apk/*
+RUN apk add --update openssh sshpass python ansible node \
+  && rm  -rf /tmp/* /var/cache/apk/*
