style: avoid dot in container name

--- a/playbook-example/hello.yml
+++ b/playbook-example/hello.yml
@@ -9,7 +9,7 @@
       mode: '777'
 # Second play
 - name: Play - for Alpines Nodejs app
-  hosts: alpine.example.com
+  hosts: alpine-example-com
   tasks:
   - name: NodeJs is installed
     apk:
