--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       replicas: 3
   managedhost-rhel8:
     image: registry.access.redhat.com/ubi8/ubi-init
-    container_name: rhel8.example.com
+    container_name: rhel8-example-com
     restart: unless-stopped
     ports:
       - 8081:80 # playbook will run nginx
@@ -34,7 +34,7 @@ services:
 
   managedhost-z:
     image: centos/systemd
-    container_name: centos7.example.com
+    container_name: centos7-example-com
     restart: unless-stopped
     ports:
       - 8082:80 # playbook will run nginx
