python executable is required for Ansible managed
managed hosts require python to be managed by Ansible

--- a/managed-host/rhel8/Dockerfile
+++ b/managed-host/rhel8/Dockerfile
@@ -1,3 +1,6 @@
 FROM registry.access.redhat.com/ubi8/ubi-init
 
-RUN yum install -y python36
+RUN yum install -y python36 && \
+  echo -e '#!/bin/bash\nbash /var/lib/alternatives/python3 "$@"' > /usr/bin/python \
+  && chmod +x /usr/bin/python \
+  && yum clean all
