--- a/managed-host/rhel8/Dockerfile
+++ b/managed-host/rhel8/Dockerfile
@@ -1,6 +1,19 @@
+FROM alpine:edge as downloads
+WORKDIR /data
+RUN wget https://www.python.org/ftp/python/3.6.2/Python-3.6.2.tar.xz \
+  && tar -xvf Python-3.6.2.tar.xz
+
+
 FROM registry.access.redhat.com/ubi8/ubi-init
 
-RUN yum install -y python36 && \
-  echo -e '#!/bin/bash\nbash /var/lib/alternatives/python3 "$@"' > /usr/bin/python \
-  && chmod +x /usr/bin/python \
-  && yum clean all
+COPY --from=downloads /data/Python-3.6.2/. /usr/src
+WORKDIR /usr/src/Python-3.6.2
+
+RUN yum install -y gcc openssl-devel && \
+  ./configure --prefix=/opt/python3 && \
+  make altinstall && \
+  ln -s /opt/python3/bin/python3.6 /usr/bin/python && \
+  chmod +x /usr/bin/python && \
+  yum remove -y gcc openssl-devel && \
+  yum clean all
+WORKDIR /
