fix: rhel8+python for ansible management

--- a/managed-host/rhel8/Dockerfile
+++ b/managed-host/rhel8/Dockerfile
@@ -1,12 +1,13 @@
 FROM alpine:edge as downloads
 WORKDIR /data
 RUN wget https://www.python.org/ftp/python/3.6.2/Python-3.6.2.tar.xz \
-  && tar -xvf Python-3.6.2.tar.xz
+  && tar -xvf Python-3.6.2.tar.xz \
+  && Python-3.6.2.tar.xz
 
 
 FROM registry.access.redhat.com/ubi8/ubi-init
 
-COPY --from=downloads /data/Python-3.6.2/. /usr/src
+COPY --from=downloads /data/. /usr/src
 WORKDIR /usr/src/Python-3.6.2
 
 RUN yum install -y gcc openssl-devel && \
@@ -15,5 +16,7 @@ RUN yum install -y gcc openssl-devel && \
   ln -s /opt/python3/bin/python3.6 /usr/bin/python && \
   chmod +x /usr/bin/python && \
   yum remove -y gcc openssl-devel && \
-  yum clean all
+  yum clean all && \
+  rm -rf /usr/src/Python*
+
 WORKDIR /
