--- a/managed-host/rhel8/Dockerfile
+++ b/managed-host/rhel8/Dockerfile
@@ -9,12 +9,12 @@ FROM registry.access.redhat.com/ubi8/ubi-init
 COPY --from=downloads /data/. /usr/src
 WORKDIR /usr/src/Python-3.6.2
 
-RUN yum install -y gcc openssl-devel && \
+RUN yum install -y gcc openssl-devel make && \
   ./configure --prefix=/opt/python3 && \
   make altinstall && \
   ln -s /opt/python3/bin/python3.6 /usr/bin/python && \
   chmod +x /usr/bin/python && \
-  yum remove -y gcc openssl-devel && \
+  yum remove -y gcc openssl-devel make && \
   yum clean all && \
   rm -rf /usr/src/Python*
 
