npm in alpine is nodejs-npm

--- a/playbook-example/hello.yml
+++ b/playbook-example/hello.yml
@@ -18,7 +18,7 @@
       state: latest
     loop:
     - nodejs
-    - npm
+    - nodejs-npm
   - name: app directory is created
     file:
       path: /node-app
