fix: doc: directory creation + add pict

--- a/playbook-example/hello.yml
+++ b/playbook-example/hello.yml
@@ -22,7 +22,7 @@
   - name: app directory is created
     file:
       path: /node-app
-      state: present
+      state: directory
   - name: app is installed
     template:
       src: app.js.j2
