--- a/managed-host/alpine/Dockerfile
+++ b/managed-host/alpine/Dockerfile
@@ -1,8 +1,15 @@
 # https://github.com/panubo/docker-sshd
-FROM docker.io/alpine:3.6
+FROM alpine:edge as alpine-systemd
+RUN apk --update --no-cache add openrc python && \
+  ln -sf /sbin/openrc-init /sbin/init
+
+ENTRYPOINT ["/sbin/init"]
+
+
+FROM alpine-systemd
 
 RUN apk update && \
-    apk add bash git python openssh rsync augeas shadow && \
+    apk add bash git openssh rsync augeas shadow && \
     deluser $(getent passwd 33 | cut -d: -f1) && \
     delgroup $(getent group 33 | cut -d: -f1) 2>/dev/null || true && \
     mkdir -p ~root/.ssh /etc/authorized_keys && chmod 700 ~root/.ssh/ && \
