--- a/playbook-example/hello.yml
+++ b/playbook-example/hello.yml
@@ -82,3 +82,18 @@
         <div style="display:flex;justify-content:center">
            <section>Served by:&nbsp;{{ inventory_hostname }}</section>
         </div>
+- name: Play - Alpine with Systemd or service - Apache webserver
+  hosts: alpinesystemd-example-com
+  tasks:
+  - name: apache is installed
+    package:
+      name: apache2
+      state: latest
+  - name: web server is started
+    service:
+      name: apache2
+      state: started
+  - name: smoke test
+    uri:
+      url: http://localhost
+      return_content: yes
