feat: dynamic inventory in-progress

--- a/control-node/Dockerfile
+++ b/control-node/Dockerfile
@@ -1,5 +1,8 @@
-FROM alpine:3.9
+ARG ANSIBLE_VERSION
+FROM abdennour/ansible:${ANSIBLE_VERSION}
 
-# docker is required to support ansible_connection=docker
-RUN apk add --update openssh sshpass python ansible docker \
-  && rm  -rf /tmp/* /var/cache/apk/*
+# add required package for ansible module
+# RUN pip install pymongo
+USER root
+RUN apk add --no-cache jq nodejs nodejs-npm && pip install yq
+USER ansible
