--- a/playbook-example/ansible.cfg
+++ b/playbook-example/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
 
-inventory = hosts
+inventory = inventory/
 private_key_file = /secrets/id_rsa
 host_key_checking = False
+roles_path = /roles
+# remote_tmp = /tmp
