--- a/control-node/Dockerfile
+++ b/control-node/Dockerfile
@@ -1,5 +1,7 @@
-FROM alpine:3.9
+ARG ANSIBLE_VERSION
+FROM abdennour/ansible:${ANSIBLE_VERSION}
 
-# docker is required to support ansible_connection=docker
-RUN apk add --update openssh sshpass python ansible docker \
-  && rm  -rf /tmp/* /var/cache/apk/*
+# add required package for ansible module
+# USER root
+# RUN pip install pymongo
+USER ansible
